trying to fix contrast issues

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ html{
 }
 
 body{
-    background-color: #a8d0e6;
+    background-color: #5da2d5;
     /* font-size: 18px; */
     font-family: 'Montserrat', sans-serif;
     margin: 3em;
@@ -61,7 +61,7 @@ h3 {
 
 h4 {
     /* font-size: 16px; */
-    color: #5da2d5;
+    color: #FFF;
     font-weight: bold;
     line-height: 1.15;
     margin: .5em;
